essentials-flyer/src/style.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	font-family: "Inter", sans-serif;
}

:root {
	--orange: #F18226;
	--green: #06A453;
	--dark: #040404;
	--white: white;
	--blue: #2196F3;
}

body {
	font-family: Arial, sans-serif;
	/* display: flex; */
	justify-content: center;
	padding: 20px;
}

.container {
	display: flex;
	gap: 20px;
}

h2 {
	font-size: 24px;
	font-weight: bold;
	color: var(--dark);
	margin-bottom: 10px;
}

.flyer-container {
	width: 210mm;
	height: auto;
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
	background-color: var(--orange);
	display: flex;
	flex-direction: column;
	position: relative;
	padding: 10px;
}

.offerings-section {
	background-image: url(assets/images/banner.png);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	min-height: 12rem;
	margin-top: 10px;
}

header,
footer {
	background-color: var(--white);
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
	display: flex;
	justify-content: space-between;
	align-items: center;
}

header {
	position: relative;
	background-image: url(assets/images/Twin.png);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	min-height: 15rem;
	display: flex;
	align-items: center;
	justify-content: center;
}

header::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(71, 38, 9, 0.8);
	/* Overlay color */
	z-index: 1;
}

.header-content {
	position: relative;
	display: flex;
	justify-content: space-between;
	width: 100%;
	padding: 20px;
	z-index: 2;
	color: white;
}

.column {
	display: flex;
	flex-direction: column;
	justify-content: center;
	width: 70%;
}

.contact-details {
	max-width: 270px;
	height: 100%;
}

.contact-item {
	display: flex;
	align-items: center;
	margin-bottom: 10px;
	font-size: 1.2rem;
	color: white;
	text-decoration: none;
}

.contact-item i {
	margin-right: 10px;
	margin-top: 10px;
	font-size: 1.5rem;
	align-items: center;
}

/* Specific colors for each contact icon */
.contact-item.email i {
	color: yellow;
}

.contact-item.phone i {
	color: blue;
}

.contact-item.whatsapp i {
	color: green;
}

.contact-item.facebook i {
	color: #1877F2;
	/* Facebook blue */
}

.brand-details {
	text-align: center;
	display: flex;
	align-items: center;
	/* border: 1px solid black; */
	max-width: 600px;
	margin-right: 30px;
}

.logo {
	max-width: 300px;
	height: 100px;
	text-align: center;
	margin-bottom: 10px;
}

.slogan {
	font-size: 1.6rem;
	font-weight: 800;
	font-family: "Cormorant Garamond", system-ui;
	margin-bottom: 10px;
}

.website-link {
	color: white;
	font-size: 1.2rem;
	text-decoration: none;
}

footer {
	position: relative;
	background-image: url(assets/images/Bubble-bath.jpg);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	min-height: 15rem;
	display: flex;
	align-items: center;
	justify-content: center;
}

footer::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(71, 38, 9, 0.8);
	/* Overlay color */
	z-index: 1;
}

.footer-content {
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: center;
	text-align: start !important;
	width: 100%;
	height: 100%;
	padding: 10px;
	/* Small padding */
	z-index: 2;
	color: white;
	justify-content: space-around;
	/* Spread content evenly */
}

.footer-content ul {
	list-style-type: disc;
	padding-left: 20px;
	margin-bottom: 10px;
	width: 100%;
	/* Take full width */
	text-align: start;
	/* Center align text */
}

.footer-content li {
	margin-bottom: 5px;
	font-weight: 700;
}

.footer-notice {
	margin-bottom: 10px;
	font-size: 1.1rem;
	font-weight: bold;
	text-align: start;
	width: 100%;
}

.footer-hours,
.footer-address {
	margin-top: 10px;
	text-align: start;
	width: 100%;
}

.footer-hours span,
.footer-address span {
	font-weight: bold;
}

.products-section {
	margin-top: 10px;
	width: 100%;
	max-height: 100%;
	padding: 20px;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	gap: 10px;
	background-color: var(--blue);
}

.product {
	max-width: calc(33.333% - 10px);
	/* Adjust for 3 products in a row with gaps */
	width: 100%;
	height: 250px;
	/* Container height */
	display: flex;
	/* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); */
	border-radius: 10px;
	overflow: hidden;
	position: relative;
	background-color: transparent;
	/* Fallback for transparent images */
}

.product img {
	width: 100%;
	height: 100%;
	object-fit: cover;
	/* Prevent cropping by containing the entire image */
	object-position: center;
	/* Center the image within the container */
	image-rendering: auto;
	/* Ensure high-quality image rendering */
	/* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); */
}

.product-content {
	display: flex;
	flex-direction: column;
	justify-content: flex-end;
	/* Align the price at the bottom */
	flex: 1;
	/* padding: 18px; */
	background-color: rgba(255, 255, 255, 0);
	/* Transparent background to see the image */
	border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
	/* backdrop-filter: blur(5px); */
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	z-index: 1;
	/* Ensure content is above the background image */
}

.product-title,
.product-description {
	display: none;
}

.product-price {
	font-size: 12px;
	font-weight: bold;
	color: var(--white);
	background-color: var(--green);
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
	border-radius: 50px;
	padding: 10px;
	position: absolute;
	bottom: 10px;
	left: 10px;
	white-space: nowrap;
	z-index: 2;
}

/* Button styling */
.product-button {
	position: absolute;
	top: 10px;
	right: 10px;
	background-color: var(--green);
	color: var(--white);
	border: none;
	border-radius: 5px;
	padding: 15px;
	font-size: 10px;
	cursor: pointer;
	z-index: 2;
}

.input-section {
	width: 300px;
}

.input-section input {
	display: block;
	font-size: larger;
	margin-bottom: 10px;
	padding: 8px;
	width: 100%;
}

.input-section button,
#toggle-form-btn {
	font-size: 20px;
	font-weight: bold;
	color: var(--white);
	background-color: var(--green);
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
	border-radius: 50px;
	padding: 10px 15px;
	margin: 10px;
	border: none;
}

